# msa

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  PLANS.md  README.md  build.gradle.kts  settings.gradle.kts
.claude/: COMPACTION-GUIDE.md  config.yml  settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
analytics/: CLAUDE.md  glossary.md
buildSrc/: build.gradle.kts
charting/: alembic.ini  pyproject.toml  seed_demo.py
chatbot/: glossary.md
code-dictionary/: CLAUDE.md  README.md  glossary.md
common/: CLAUDE.md  README.md  build.gradle.kts
discovery/: CLAUDE.md  README.md  build.gradle.kts
docker/: .env.example  Dockerfile  docker-compose.infra.yml  docker-compose.monitoring.yml  docker-compose.nginx.yml  docker-compose.yml  docker-down.sh
docs/: README.md  context-map.md  doc-index-init-report.md  doc-index.json  doc-index.lock.json
experiment/: CLAUDE.md  glossary.md
front/: .env.example  package.json
fulfillment/: glossary.md
gateway/: CLAUDE.md  README.md  build.gradle.kts
gradle/: libs.versions.toml
inventory/: glossary.md
member/: CLAUDE.md  glossary.md
order/: CLAUDE.md  build.gradle.kts  glossary.md
place/: CLAUDE.md
portal-fe/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  (+4 more)
quant/ingest/: .dockerignore  Dockerfile  README.md  pyproject.toml
quant/ingest/src/: scheduler.py
quant/ingest/src/sinks/: clickhouse_sink.py
quant/ingest/src/sources/: dart_corp_src.py  fdr_src.py  investor_flows_src.py  yfinance_fundamentals_src.py  yfinance_src.py
(+3281 files in other folders)
