[project]
name = "quant-ingest"
version = "0.1.0"
description = "OHLCV ingest sidecar — yfinance/FinanceDataReader → ClickHouse"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "finance-datareader>=0.9.50",
    "pykrx>=1.0.45",
    "clickhouse-connect>=0.7.16",
    "pandas>=2.2.0",
    "click>=8.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
